[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "flask>=3.1.1",
    "flask-cors>=6.0.1",
    "folium>=0.20.0",
    "plotly>=6.2.0",
    "streamlit-folium>=0.25.0",
    "streamlit>=1.46.1",
    "scikit-learn>=1.7.0",
    "pandas>=2.3.1",
    "numpy>=2.3.1",
    "requests>=2.32.4",
    "tensorflow>=2.14.0",
]
